trunk/Archive2/3f/5045adf6c5eb84/output
main.cpp:6:4: error: definition of implicitly declared copy constructor
A::A(const A&){ };
   ^
1 error generated.
