trunk/Archive2/3f/5045adf6c5eb84/main.cpp
struct A
{
    ~A(){ };
};

A::A(const A&){ };

int main(){ }

